Fixes alignment of main menu blue bar with actual menu items
mario h.
node/59667

--- a/sites/all/themes/slac/css/main.css
+++ b/sites/all/themes/slac/css/main.css
@@ -8,7 +8,7 @@
 
 #header {
   background: url("../images/header-bg.png") 0 52px repeat-x;
-  height: 84px;
+  height: 82px;
   margin: 0 auto;
   margin-bottom: 78px;
 }
