--- a/sites/all/themes/slac/sass/components/_header.scss
+++ b/sites/all/themes/slac/sass/components/_header.scss
@@ -9,7 +9,7 @@
     content: "";
   }
   background: url('../images/header-bg.png') 0 52px repeat-x;
-  height: 84px;
+  height: 82px;
   margin: 0 auto;
   margin-bottom: 78px;
   .logo {
